--- a/detail-product.html
+++ b/detail-product.html
@@ -936,7 +936,7 @@
           email: email,
           mobile: phone,
           description: `Order ID: ${orderId} - ${description || 'Digital Product'}`, // Embed Order ID for robust matching
-          redirectUrl: `${window.location.origin}/detail-order.html?orderId=${orderId}`,
+          redirectUrl: `${window.location.origin}/detail-order.html`, // Redirect to generic page, Mayar appends ?id={invoiceId}
           items: [
             {
               name: itemName,
@@ -965,7 +965,31 @@
 
         // Mayar API returns 'link' not 'url'
         if (response.ok && data.data && data.data.link) {
-          // Success - redirect to Mayar payment page
+          // Success!
+          const invoiceId = data.data.id;
+          console.log('Invoice created:', invoiceId);
+
+          // CRITICAL: Save Invoice ID to Firestore immediately
+          // This ensures detail-order.html can find the order by invoice
+          // even before the webhook fires.
+          try {
+            const orderRef = doc(db, "orders", orderId);
+            await runTransaction(db, async (transaction) => {
+              // We use a transaction or just update? Update is fine here as we just created it.
+              // But let's use simple update.
+              // Actually, we are outside the previous transaction.
+            });
+            // Simple update is sufficient
+            const { updateDoc } = await import("https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js");
+            await updateDoc(orderRef, { invoiceId: invoiceId });
+            console.log('Invoice ID saved to Firestore.');
+          } catch (dbError) {
+            console.error('Failed to save invoiceId to Firestore:', dbError);
+            // Proceed anyway, webhook will fix it later or we have orderId backup?
+            // But user relies on invoice link...
+          }
+
+          // Redirect to Mayar payment page
           console.log('Redirecting to payment page:', data.data.link);
           window.location.href = data.data.link;
         } else {
