--- a/detail-order.html
+++ b/detail-order.html
@@ -396,7 +396,21 @@
       }
 
       function processOrderData(data) {
-        console.log("Order Data Loaded:", data); // DEBUG: Check if invoiceId exists
+        console.log("Order Data Loaded:", data); // DEBUG
+
+        // FEATURE: URL Masquerading
+        // If we loaded via orderId but have an invoiceId, switch URL to use invoice
+        // This makes the link shareable and hides the internal orderId
+        if (data.invoiceId) {
+          const currentUrl = new URL(window.location);
+          if (currentUrl.searchParams.has("orderId")) {
+            currentUrl.searchParams.delete("orderId");
+            currentUrl.searchParams.set("invoice", data.invoiceId);
+            window.history.replaceState({}, '', currentUrl);
+            // Update params specific variables if needed, though page is already loading
+          }
+        }
+
         const displayRefId = data.invoiceId || refId || id;
         document.getElementById("ref-id").textContent = displayRefId;
         document.getElementById("product-name").textContent = data.productName;
