--- a/detail-order.html
+++ b/detail-order.html
@@ -167,7 +167,7 @@
           <div>
             <h3 class="text-sm font-bold text-slate-200 mb-1">Butuh Bantuan?</h3>
             <p class="text-xs text-slate-400 leading-relaxed" data-i18n="status_info_desc">
-              Produk digital Anda akan ditampilkan di kolom sebelah kanan. Jika ada kendala, hubungi kami.
+              Jika produk digital yang Anda terima tidak sesuai deskripsi atau tidak berfungsi sebagaimana mestinya, silakan hubungi kami untuk mendapatkan solusi.
             </p>
           </div>
         </div>
@@ -612,6 +612,7 @@
     window.viewInvoice = viewInvoice;
   </script>
 </body>
+
 
 
 </html>
