--- a/detail-order.html
+++ b/detail-order.html
@@ -602,7 +602,7 @@
       const invoiceId = displayedRef && displayedRef !== '...' && displayedRef !== '-' ? displayedRef : refId;
 
       if (invoiceId) {
-        window.location.href = `https://arufkuy.myr.id/invoices/${invoiceId}`;
+        window.location.href = `https://arufkuy.myr.id/invoice/${invoiceId}`;
       } else {
         alert("Invoice ID belum tersedia.");
       }
@@ -616,3 +616,4 @@
 
 
 </html>
+
