--- a/detail-order.html
+++ b/detail-order.html
@@ -91,6 +91,22 @@
     details summary {
       list-style: none;
     }
+
+    /* Star Rating */
+    .star-rating input {
+      display: none;
+    }
+    .star-rating label {
+      cursor: pointer;
+      color: #334155;
+      font-size: 1.5rem;
+      transition: color 0.2s;
+    }
+    .star-rating input:checked ~ label,
+    .star-rating label:hover,
+    .star-rating label:hover ~ label {
+      color: #fbbf24;
+    }
   </style>
 </head>
 
@@ -167,7 +183,7 @@
           <div>
             <h3 class="text-sm font-bold text-slate-200 mb-1">Butuh Bantuan?</h3>
             <p class="text-xs text-slate-400 leading-relaxed" data-i18n="status_info_desc">
-              Jika produk digital yang Anda terima tidak sesuai deskripsi atau tidak berfungsi sebagaimana mestinya, silakan hubungi kami untuk mendapatkan solusi.
+              Produk digital Anda akan ditampilkan di kolom sebelah kanan. Jika ada kendala, hubungi kami.
             </p>
           </div>
         </div>
@@ -257,7 +273,51 @@
         </div>
       </div>
 
-      <!-- 6. Footer Actions -->
+      <!-- 6. Review Section (New) -->
+      <div id="review-section" class="hidden rounded-3xl border border-white/10 bg-white/[0.03] backdrop-blur-sm shadow-glow p-6">
+        <div class="flex items-center gap-2 mb-4">
+          <div class="h-5 w-5 rounded-full bg-yellow-500/20 grid place-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 text-yellow-400" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+            </svg>
+          </div>
+          <h2 class="text-xs font-bold text-yellow-400 uppercase tracking-widest">Beri Ulasan</h2>
+        </div>
+
+        <form id="review-form" class="space-y-4">
+          <div class="flex flex-col items-center justify-center py-2">
+            <div class="star-rating flex flex-row-reverse gap-1">
+              <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="5 stars">★</label>
+              <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="4 stars">★</label>
+              <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="3 stars">★</label>
+              <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="2 stars">★</label>
+              <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="1 star">★</label>
+            </div>
+            <p class="text-xs text-slate-400 mt-1">Bagaimana pengalaman Anda?</p>
+          </div>
+
+          <textarea id="review-text" rows="3"
+            class="w-full bg-slate-900/50 border border-white/10 rounded-xl p-3 text-sm text-white placeholder-slate-500 focus:outline-none focus:border-emerald-500/50 transition resize-none"
+            placeholder="Tulis ulasan Anda di sini... (Opsional)"></textarea>
+
+          <button type="submit" id="submit-review-btn"
+            class="w-full py-3 rounded-xl bg-emerald-500 hover:bg-emerald-600 text-white text-sm font-semibold transition shadow-lg shadow-emerald-500/20 disabled:opacity-50 disabled:cursor-not-allowed">
+            Kirim Ulasan
+          </button>
+        </form>
+
+        <div id="review-success" class="hidden text-center py-4">
+          <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-emerald-500/20 text-emerald-400 mb-3">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+            </svg>
+          </div>
+          <h3 class="text-white font-medium">Terima Kasih!</h3>
+          <p class="text-sm text-slate-400 mt-1">Ulasan Anda sangat berarti bagi kami.</p>
+        </div>
+      </div>
+
+      <!-- 7. Footer Actions -->
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
         <a href="index.html"
           class="flex w-full justify-center items-center gap-2 rounded-2xl bg-white/[0.07] hover:bg-white/[0.12] py-4 text-sm font-semibold text-white transition border border-white/5">
@@ -300,6 +360,11 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+
+    // --- CONFIGURATION ---
+    // Paste your Google Apps Script Web App URL here
+    const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzYGA-rzPSIXOvLftbqCMhXDahn90HViWAqJuXxRTUn7kUYJEPlxot3w7P0JwgFpJdI/exec";
+    // ---------------------
 
     const params = new URLSearchParams(window.location.search);
     const orderId = params.get("orderId");
@@ -466,6 +531,11 @@
             renderDeliveredItems(itemsToRender);
             // Items delivered — stop polling
             if (pollInterval) { clearInterval(pollInterval); pollInterval = null; }
+
+            // Show Review Section if paid
+            // Pass the displayRefId (Invoice ID) to check against Google Sheet
+            // Also pass customerName to be stored in dataset
+            checkAndShowReview(displayRefId, data.customerName);
           }
 
           if (data.buyerNotes) {
@@ -602,11 +672,94 @@
       const invoiceId = displayedRef && displayedRef !== '...' && displayedRef !== '-' ? displayedRef : refId;
 
       if (invoiceId) {
-        window.location.href = `https://arufkuy.myr.id/invoice/${invoiceId}`;
+        window.location.href = `https://arufkuy.myr.id/invoices/${invoiceId}`;
       } else {
         alert("Invoice ID belum tersedia.");
       }
     }
+
+    // --- REVIEW SYSTEM ---
+    async function checkAndShowReview(orderId, customerName) {
+      if (!orderId) return;
+
+      // 1. Cek Server (Google Sheet) - PRIORITAS UTAMA
+      try {
+        const response = await fetch(`${GOOGLE_SCRIPT_URL}?checkId=${orderId}`);
+        const data = await response.json();
+
+        if (data.reviewed) {
+          console.log("Review found on Server");
+          document.getElementById('review-section').classList.add('hidden');
+        } else {
+          console.log("No review found on Server, showing form");
+          document.getElementById('review-section').classList.remove('hidden');
+          document.getElementById('review-form').dataset.orderId = orderId;
+          // Store customer name in dataset
+          document.getElementById('review-form').dataset.customerName = customerName || "Pelanggan";
+        }
+      } catch (e) {
+        console.warn("Failed to check review status from server, falling back to local only", e);
+        // Jika server error/offline, cek local storage sebagai fallback
+        const storageKey = 'reviewed_' + orderId;
+        if (localStorage.getItem(storageKey)) {
+             document.getElementById('review-section').classList.add('hidden');
+        } else {
+             document.getElementById('review-section').classList.remove('hidden');
+             document.getElementById('review-form').dataset.orderId = orderId;
+             document.getElementById('review-form').dataset.customerName = customerName || "Pelanggan";
+        }
+      }
+    }
+
+    document.getElementById('review-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const rating = document.querySelector('input[name="rating"]:checked');
+      if (!rating) {
+        alert("Silakan pilih bintang terlebih dahulu.");
+        return;
+      }
+
+      const currentOrderId = this.dataset.orderId;
+      const currentCustomerName = this.dataset.customerName;
+
+      if (!currentOrderId) {
+        alert("Terjadi kesalahan: Order ID tidak ditemukan.");
+        return;
+      }
+
+      const btn = document.getElementById('submit-review-btn');
+      btn.disabled = true;
+      btn.textContent = "Mengirim...";
+
+      const reviewData = {
+        orderId: currentOrderId,
+        customerName: currentCustomerName, // Kirim Nama
+        productName: document.getElementById('product-name').textContent,
+        rating: rating.value,
+        review: document.getElementById('review-text').value
+      };
+
+      fetch(GOOGLE_SCRIPT_URL, {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: {
+          'Content-Type': 'text/plain'
+        },
+        body: JSON.stringify(reviewData)
+      }).then(() => {
+        // Success handling
+        // Kita tetap simpan ke localStorage sebagai cache/optimasi, tapi pengecekan utama tetap ke server
+        localStorage.setItem('reviewed_' + currentOrderId, 'true');
+        document.getElementById('review-form').classList.add('hidden');
+        document.getElementById('review-success').classList.remove('hidden');
+      }).catch(err => {
+        console.error('Review Error:', err);
+        alert("Gagal mengirim ulasan. Silakan coba lagi.");
+        btn.disabled = false;
+        btn.textContent = "Kirim Ulasan";
+      });
+    });
 
     // Expose function to global scope for onclick
     window.viewInvoice = viewInvoice;
@@ -614,6 +767,4 @@
 </body>
 
 
-
 </html>
-
