--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <nav class="hidden items-center gap-6 text-sm text-slate-300 md:flex">
         <a href="index.html#products" class="hover:text-white transition">Produk</a>
         <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
+        <a href="feedback.html" class="hover:text-white transition">Feedback</a>
         <a href="help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
         <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
