--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Arufkuy Store — Digital Goods</title>
   <meta name="description" content="Arufkuy Store menyediakan digital goods dengan proses cepat dan aman." />
   <meta name="theme-color" content="#0b1220" />
-
+  <link rel="icon" type="image/png" href="icon.png">
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -1749,5 +1749,6 @@
   </script>
   <!--End of Tawk.to Script-->
 </body>
+
 
 </html>
