--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hubungi Kami — Arufkuy Store</title>
+  <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Hubungi Arufkuy Store untuk pertanyaan, bantuan, atau kerjasama." />
   <meta name="theme-color" content="#0b1220" />
 
