--- a/help-center.html
+++ b/help-center.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pusat Bantuan — Arufkuy Store</title>
+  <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Temukan jawaban dan panduan lengkap seputar layanan Arufkuy Store." />
   <meta name="theme-color" content="#0b1220" />
 
