--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arufkuy Store — Digital Goods</title>
+  <title>Arufkuy Store - Digital Goods</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Arufkuy Store menyediakan digital goods dengan proses cepat dan aman." />
   <meta name="theme-color" content="#0b1220" />
@@ -1750,5 +1750,6 @@
   </script>
   <!--End of Tawk.to Script-->
 </body>
+
 
 </html>
