--- a/order-guide.html
+++ b/order-guide.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cara Order — Arufkuy Store</title>
+  <title>Cara Order - Arufkuy Store</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Panduan lengkap cara melakukan pemesanan produk digital di Arufkuy Store." />
   <meta name="theme-color" content="#0b1220" />
@@ -460,5 +460,6 @@
     init();
   </script>
 </body>
+
 
 </html>
