--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ulasan Pelanggan — Arufkuy Store</title>
+  <title>Ulasan Pelanggan - Arufkuy Store</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Lihat apa kata pelanggan tentang layanan Arufkuy Store." />
   <meta name="theme-color" content="#0b1220" />
@@ -461,4 +461,5 @@
     fetchReviews();
   </script>
 </body>
+
 </html>
