--- a/detail-product.html
+++ b/detail-product.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Detail Produk — Arufkuy Store</title>
+  <title>Detail Produk - Arufkuy Store</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -1595,5 +1595,6 @@
   </script>
   <!--End of Tawk.to Script-->
 </body>
+
 
 </html>
