--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hubungi Kami — Arufkuy Store</title>
+  <title>Hubungi Kami - Arufkuy Store</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Hubungi Arufkuy Store untuk pertanyaan, bantuan, atau kerjasama." />
   <meta name="theme-color" content="#0b1220" />
@@ -467,5 +467,6 @@
     init();
   </script>
 </body>
+
 
 </html>
