--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arufkuy Store - Digital Goods</title>
+  <title>Arufkuy Store — Digital Goods</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Arufkuy Store menyediakan digital goods dengan proses cepat dan aman." />
   <meta name="theme-color" content="#0b1220" />
@@ -54,7 +54,7 @@
     }
 
     .payment-carousel {
-      animation: scroll-infinite 10s linear infinite;
+      animation: scroll-infinite 45s linear infinite;
     }
 
     .payment-carousel-wrapper:hover .payment-carousel {
@@ -1751,6 +1751,4 @@
   <!--End of Tawk.to Script-->
 </body>
 
-
 </html>
-
