--- a/help-center.html
+++ b/help-center.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pusat Bantuan - Arufkuy Store</title>
+  <title>Pusat Bantuan — Arufkuy Store</title>
   <link rel="icon" type="image/png" href="icon.png">
   <meta name="description" content="Temukan jawaban dan panduan lengkap seputar layanan Arufkuy Store." />
   <meta name="theme-color" content="#0b1220" />
@@ -524,6 +524,5 @@
     init();
   </script>
 </body>
-
 
 </html>
