--- a/feedback.html
+++ b/feedback.html
@@ -264,13 +264,41 @@
   </main>
 
   <!-- Footer -->
-  <footer class="border-t border-white/10 mt-auto">
-    <div class="mx-auto max-w-6xl px-4 py-8">
-      <div class="flex flex-col gap-6 md:flex-row md:items-center md:justify-between">
-        <div class="text-sm text-slate-400">
-          <p class="font-semibold text-slate-200">Arufkuy Digital Store</p>
-          <p class="mt-1">© <span id="year"></span> • All rights reserved.</p>
+  <footer class="border-t border-white/10 bg-slate-950 pt-16 pb-8">
+    <div class="mx-auto max-w-6xl px-4">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-12 mb-12">
+        <div class="col-span-1 md:col-span-2">
+          <a href="index.html" class="flex items-center gap-3 mb-6">
+            <div class="grid h-10 w-10 place-items-center rounded-xl bg-white/5 shadow-glow">
+              <span class="text-lg font-bold text-indigo-300">A</span>
+            </div>
+            <span class="text-lg font-bold text-white">Arufkuy Store</span>
+          </a>
+          <p class="text-slate-400 text-sm leading-relaxed max-w-sm">
+            Platform penyedia produk digital otomatis, cepat, dan terpercaya. Solusi terbaik untuk kebutuhan digital Anda.
+          </p>
         </div>
+        <div>
+          <h4 class="text-white font-bold mb-6">Menu</h4>
+          <ul class="space-y-4 text-sm text-slate-400">
+            <li><a href="index.html" class="hover:text-indigo-400 transition">Beranda</a></li>
+            <li><a href="index.html#products" class="hover:text-indigo-400 transition">Produk</a></li>
+            <li><a href="order-guide.html" class="hover:text-indigo-400 transition">Cara Order</a></li>
+            <li><a href="contact.html" class="hover:text-indigo-400 transition">Kontak</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-white font-bold mb-6">Informasi</h4>
+          <ul class="space-y-4 text-sm text-slate-400">
+            <li><a href="about-us.html" class="hover:text-indigo-400 transition">Tentang Kami</a></li>
+            <li><a href="privacy-policy.html" class="hover:text-indigo-400 transition">Kebijakan Privasi</a></li>
+            <li><a href="terms-of-service.html" class="hover:text-indigo-400 transition">Syarat & Ketentuan</a></li>
+            <li><a href="disclaimer.html" class="hover:text-indigo-400 transition text-white">Disclaimer</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="border-t border-white/10 pt-8 flex flex-col md:flex-row justify-between items-center gap-4">
+        <p class="text-xs text-slate-500">© <span id="year"></span> Arufkuy Store. All rights reserved.</p>
         <div class="flex items-center gap-5">
           <a href="https://discord.gg/3sDGqtZBcW" class="text-slate-400 hover:text-white transition">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord"
