--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,53 +4,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hubungi Kami — Arufkuy Store</title>
-  <meta name="description" content="Hubungi tim support Arufkuy Store untuk bantuan seputar produk digital." />
+  <title>Kebijakan Privasi — Arufkuy Store</title>
   <meta name="theme-color" content="#0b1220" />
-
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          boxShadow: {
-            glow: "0 0 0 1px rgba(148,163,184,.12), 0 12px 40px rgba(2,6,23,.55)"
-          }
-        }
-      }
-    }
-  </script>
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
+    html { scroll-behavior: smooth; }
     .grid-bg {
       background-image: radial-gradient(circle at 1px 1px, rgba(148, 163, 184, .14) 1px, transparent 0);
       background-size: 26px 26px;
     }
-
-    /* Hide scrollbar for dropdown */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-
-    .no-scrollbar {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-    }
+    .prose-invert h2 { color: #fff; margin-top: 2em; margin-bottom: 1em; font-size: 1.5em; font-weight: 700; }
+    .prose-invert p { color: #94a3b8; line-height: 1.75; margin-bottom: 1.5em; }
+    .prose-invert ul { color: #94a3b8; list-style-type: disc; padding-left: 1.5em; margin-bottom: 1.5em; }
+    .prose-invert li { margin-bottom: 0.5em; }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
 </head>
 
 <body class="min-h-screen bg-slate-950 text-slate-100 flex flex-col">
-  <!-- Top gradient -->
-  <div class="pointer-events-none fixed inset-0 -z-10 overflow-hidden">
-    <div class="absolute -top-40 left-1/2 h-[520px] w-[520px] -translate-x-1/2 rounded-full bg-indigo-500/20 blur-3xl">
-    </div>
-    <div class="absolute top-40 right-[-140px] h-[380px] w-[380px] rounded-full bg-cyan-500/15 blur-3xl"></div>
-  </div>
-
   <!-- Header -->
   <header class="sticky top-0 z-50 border-b border-white/10 bg-slate-950/70 backdrop-blur">
     <div class="mx-auto flex max-w-6xl items-center justify-between px-4 py-4">
@@ -69,7 +41,7 @@
         <a href="order-guide.html" class="hover:text-white transition">Cara Order</a>
         <a href="feedback.html" class="hover:text-white transition">Feedback</a>
         <a href="help-center.html" class="hover:text-white transition">Pusat Bantuan</a>
-        <a href="contact.html" class="text-white font-medium transition">Kontak</a>
+        <a href="contact.html" class="hover:text-white transition">Kontak</a>
       </nav>
 
       <div class="flex items-center gap-3">
@@ -157,7 +129,7 @@
             Pusat Bantuan
           </a>
           <a href="contact.html" onclick="closeMobileMenu()"
-            class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-white bg-white/10 transition">
+            class="flex items-center gap-3 rounded-xl px-4 py-3 text-sm font-medium text-slate-200 hover:bg-white/10 transition">
             <svg class="w-5 h-5 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z">
@@ -223,110 +195,42 @@
     </div>
   </header>
 
-  <!-- Main Content -->
-  <main class="flex-grow grid-bg">
-    <!-- Hero Search -->
-    <section class="relative py-16 md:py-24 text-center px-4">
-      <div class="max-w-3xl mx-auto">
-        <p
-          class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-white/5 px-4 py-2 text-xs text-slate-300 mb-6">
-          <span class="h-2 w-2 rounded-full bg-indigo-400"></span>
-          <span>Hubungi Kami</span>
-        </p>
-        <h1 class="text-4xl font-bold tracking-tight md:text-5xl mb-6">
-          Kami Siap <span class="text-indigo-300">Membantu</span>
-        </h1>
-        <p class="text-slate-400 text-lg max-w-2xl mx-auto">
-          Punya pertanyaan atau kendala? Tim support kami siap melayani Anda setiap hari.
-        </p>
+  <main class="flex-grow grid-bg py-16 px-4">
+    <div class="max-w-3xl mx-auto">
+      <h1 class="text-3xl md:text-4xl font-bold mb-8 text-center">Kebijakan Privasi</h1>
+
+      <div class="prose-invert">
+        <p>Terakhir diperbarui: <span id="date"></span></p>
+
+        <p>Arufkuy Store ("kami") berkomitmen untuk melindungi privasi Anda. Kebijakan Privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, dan melindungi informasi pribadi Anda saat menggunakan layanan kami.</p>
+
+        <h2>1. Informasi yang Kami Kumpulkan</h2>
+        <p>Kami hanya mengumpulkan informasi yang diperlukan untuk memproses pesanan Anda, meliputi:</p>
+        <ul>
+          <li>Alamat email (untuk pengiriman produk).</li>
+          <li>Nomor telepon (opsional, untuk konfirmasi).</li>
+          <li>Detail transaksi pembayaran.</li>
+        </ul>
+
+        <h2>2. Penggunaan Informasi</h2>
+        <p>Informasi yang kami kumpulkan digunakan untuk:</p>
+        <ul>
+          <li>Memproses dan mengirimkan pesanan produk digital Anda.</li>
+          <li>Mengirimkan notifikasi status pesanan.</li>
+          <li>Memberikan dukungan pelanggan jika terjadi kendala.</li>
+          <li>Meningkatkan kualitas layanan kami.</li>
+        </ul>
+
+        <h2>3. Keamanan Data</h2>
+        <p>Kami menerapkan langkah-langkah keamanan teknis untuk melindungi data Anda. Kami tidak menyimpan informasi kartu kredit atau detail perbankan sensitif Anda; semua pembayaran diproses melalui gateway pembayaran pihak ketiga yang aman.</p>
+
+        <h2>4. Berbagi Informasi</h2>
+        <p>Kami tidak akan pernah menjual, menyewakan, atau menukar informasi pribadi Anda kepada pihak ketiga untuk tujuan pemasaran. Data hanya dibagikan jika diwajibkan oleh hukum.</p>
+
+        <h2>5. Perubahan Kebijakan</h2>
+        <p>Kami dapat memperbarui kebijakan ini dari waktu ke waktu. Perubahan akan efektif segera setelah diposting di halaman ini.</p>
       </div>
-    </section>
-
-    <!-- Contact Options -->
-    <section class="mx-auto max-w-6xl px-4 pb-24">
-      <div class="grid gap-6 md:grid-cols-3">
-        <!-- WhatsApp -->
-        <a href="https://wa.me/6281346362526" target="_blank"
-          class="group block rounded-3xl border border-white/10 bg-white/5 p-8 hover:bg-white/10 transition-all duration-300 hover:-translate-y-1 text-center">
-          <div
-            class="mx-auto h-16 w-16 rounded-2xl bg-emerald-500/10 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-            <svg class="w-8 h-8 text-emerald-400" fill="currentColor" viewBox="0 0 24 24">
-              <path
-                d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
-            </svg>
-          </div>
-          <h3 class="text-xl font-bold text-white mb-2">WhatsApp</h3>
-          <p class="text-sm text-slate-400 mb-4">Respon cepat untuk pertanyaan umum dan konfirmasi pesanan.</p>
-          <span class="text-emerald-400 text-sm font-semibold">Chat Sekarang →</span>
-        </a>
-
-        <!-- Discord -->
-        <a href="https://discord.gg/3sDGqtZBcW" target="_blank"
-          class="group block rounded-3xl border border-white/10 bg-white/5 p-8 hover:bg-white/10 transition-all duration-300 hover:-translate-y-1 text-center">
-          <div
-            class="mx-auto h-16 w-16 rounded-2xl bg-indigo-500/10 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-            <svg class="w-8 h-8 text-indigo-400" fill="currentColor" viewBox="0 0 24 24">
-              <path
-                d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z" />
-            </svg>
-          </div>
-          <h3 class="text-xl font-bold text-white mb-2">Discord</h3>
-          <p class="text-sm text-slate-400 mb-4">Bergabung dengan komunitas kami untuk update dan diskusi.</p>
-          <span class="text-indigo-400 text-sm font-semibold">Gabung Server →</span>
-        </a>
-
-        <!-- Email -->
-        <a href="mailto:support@arufkuy.me"
-          class="group block rounded-3xl border border-white/10 bg-white/5 p-8 hover:bg-white/10 transition-all duration-300 hover:-translate-y-1 text-center">
-          <div
-            class="mx-auto h-16 w-16 rounded-2xl bg-sky-500/10 flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
-            <svg class="w-8 h-8 text-sky-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z">
-              </path>
-            </svg>
-          </div>
-          <h3 class="text-xl font-bold text-white mb-2">Email</h3>
-          <p class="text-sm text-slate-400 mb-4">Untuk kerjasama bisnis atau kendala teknis yang kompleks.</p>
-          <span class="text-sky-400 text-sm font-semibold">Kirim Email →</span>
-        </a>
-      </div>
-    </section>
-
-    <!-- FAQ Section -->
-    <section class="mx-auto max-w-3xl px-4 pb-24">
-      <h2 class="text-2xl font-bold text-center mb-8">Pertanyaan Umum</h2>
-      <div class="space-y-4">
-        <details class="group rounded-2xl border border-white/10 bg-white/5 overflow-hidden">
-          <summary
-            class="flex items-center justify-between px-6 py-4 cursor-pointer hover:bg-white/5 transition select-none list-none">
-            <span class="font-medium text-slate-200">Berapa lama respon admin?</span>
-            <svg class="w-5 h-5 text-slate-500 transition-transform group-open:rotate-180" fill="none"
-              stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-            </svg>
-          </summary>
-          <div class="px-6 pb-6 pt-2 text-slate-400 text-sm leading-relaxed border-t border-white/5">
-            Admin kami online setiap hari pukul 09.00 - 22.00 WIB. Diluar jam tersebut, respon mungkin sedikit lebih
-            lambat. Namun sistem otomatis kami berjalan 24/7.
-          </div>
-        </details>
-        <details class="group rounded-2xl border border-white/10 bg-white/5 overflow-hidden">
-          <summary
-            class="flex items-center justify-between px-6 py-4 cursor-pointer hover:bg-white/5 transition select-none list-none">
-            <span class="font-medium text-slate-200">Bagaimana jika produk belum diterima?</span>
-            <svg class="w-5 h-5 text-slate-500 transition-transform group-open:rotate-180" fill="none"
-              stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-            </svg>
-          </summary>
-          <div class="px-6 pb-6 pt-2 text-slate-400 text-sm leading-relaxed border-t border-white/5">
-            Silakan cek folder spam di email Anda. Jika masih belum ada, hubungi kami melalui WhatsApp dengan
-            menyertakan Order ID Anda.
-          </div>
-        </details>
-      </div>
-    </section>
+    </div>
   </main>
 
   <!-- Footer -->
@@ -350,14 +254,14 @@
             <li><a href="index.html" class="hover:text-indigo-400 transition">Beranda</a></li>
             <li><a href="index.html#products" class="hover:text-indigo-400 transition">Produk</a></li>
             <li><a href="order-guide.html" class="hover:text-indigo-400 transition">Cara Order</a></li>
-            <li><a href="contact.html" class="hover:text-indigo-400 transition text-white">Kontak</a></li>
+            <li><a href="contact.html" class="hover:text-indigo-400 transition">Kontak</a></li>
           </ul>
         </div>
         <div>
           <h4 class="text-white font-bold mb-6">Informasi</h4>
           <ul class="space-y-4 text-sm text-slate-400">
             <li><a href="about-us.html" class="hover:text-indigo-400 transition">Tentang Kami</a></li>
-            <li><a href="privacy-policy.html" class="hover:text-indigo-400 transition">Kebijakan Privasi</a></li>
+            <li><a href="privacy-policy.html" class="hover:text-indigo-400 transition text-white">Kebijakan Privasi</a></li>
             <li><a href="terms-of-service.html" class="hover:text-indigo-400 transition">Syarat & Ketentuan</a></li>
             <li><a href="disclaimer.html" class="hover:text-indigo-400 transition">Disclaimer</a></li>
           </ul>
@@ -394,22 +298,15 @@
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById("date").textContent = new Date().toLocaleDateString('id-ID', { year: 'numeric', month: 'long', day: 'numeric' });
 
-    // Mobile Menu Toggle
     function toggleMobileMenu() {
       const menu = document.getElementById('mobile-menu');
-      const hamburgerIcon = document.getElementById('hamburger-icon');
-      const closeIcon = document.getElementById('close-icon');
-
-      if (menu.classList.contains('hidden')) {
-        menu.classList.remove('hidden');
-        hamburgerIcon.classList.add('hidden');
-        closeIcon.classList.remove('hidden');
-      } else {
-        menu.classList.add('hidden');
-        hamburgerIcon.classList.remove('hidden');
-        closeIcon.classList.add('hidden');
-      }
+      const hamburger = document.getElementById('hamburger-icon');
+      const close = document.getElementById('close-icon');
+      menu.classList.toggle('hidden');
+      hamburger.classList.toggle('hidden');
+      close.classList.toggle('hidden');
     }
 
     function closeMobileMenu() {
@@ -464,5 +361,4 @@
     init();
   </script>
 </body>
-
 </html>
